# gcem

./: .appveyor.yml  .gitignore  .lgtm.yml  .readthedocs.requirements.txt  .readthedocs.yml  .travis.yml  CMakeLists.txt  NOTICE.txt  README.md  contributors.txt
.github/workflows/: main.yml
binder/: environment.yml
cmake_files/: gcemConfig.cmake.in
docs/: environment.yml
docs/source/: conf.py  examples.rst  index.rst
docs/source/api/: algorithms.rst  basic_functions.rst  hyperbolic_functions.rst  math_index.rst  special_functions.rst  trigonometric_functions.rst
include/: gcem.hpp
include/gcem_incl/: abs.hpp  acos.hpp  acosh.hpp  asin.hpp  asinh.hpp  atan.hpp  atan2.hpp  atanh.hpp  beta.hpp  binomial_coef.hpp  ceil.hpp  copysign.hpp  cos.hpp  cosh.hpp  erf.hpp  erf_inv.hpp  erfinv.hpp  exp.hpp  expm1.hpp  factorial.hpp  find_exponent.hpp  find_fraction.hpp  find_whole.hpp  floor.hpp  gcd.hpp  gcem_options.hpp  incomplete_beta.hpp  incomplete_beta_inv.hpp  incomplete_gamma.hpp  incomplete_gamma_inv.hpp  is_even.hpp  is_inf.hpp  is_nan.hpp  is_odd.hpp  lbeta.hpp  lcm.hpp  lgamma.hpp  lmgamma.hpp  log.hpp  log10.hpp  (+21 more)
include/gcem_incl/quadrature/: gauss_legendre_30.hpp  gauss_legendre_50.hpp
notebooks/: gcem.ipynb
tests/: CMakeLists.txt  Makefile  abs.cpp  acos.cpp  acos_test.cpp  acosh.cpp  asin.cpp  asin_test.cpp  asinh.cpp  asinh_test.cpp  atan.cpp  atan2.cpp  atan_test.cpp  atanh.cpp  binomial_coef.cpp  copysign.cpp  cos.cpp  cos_test.cpp  cosh.cpp  cosh_test.cpp  cov_check  erf.cpp  erf_inv.cpp  erf_test.cpp  erfinv.cpp  erfinv_test.cpp  exp.cpp  exp_test.cpp  expm1.cpp  factorial.cpp  fmod.cpp  gcd.cpp  gcem_tests.hpp  hypot.cpp  incomplete_beta.cpp  incomplete_beta_inv.cpp  incomplete_beta_inv_test.cpp  incomplete_beta_test.cpp  incomplete_gamma.cpp  incomplete_gamma_inv.cpp  (+28 more)
